[gd_scene load_steps=13 format=3 uid="uid://0v2sf6dingyr"]

[ext_resource type="Script" path="res://Scripts/Cannon_Script.gd" id="1_p1qtf"]
[ext_resource type="Texture2D" uid="uid://dxcdmye5awd7u" path="res://sprites/cannon_sprites/cannon_body2.png" id="2_6g0li"]
[ext_resource type="Texture2D" uid="uid://bahq5vsp8tblr" path="res://sprites/cannon_sprites/cannon_base.png" id="3_13u24"]
[ext_resource type="Texture2D" uid="uid://dir1jjprmgypf" path="res://sprites/cannon_sprites/cannon_shoot_sprites.png" id="4_5i172"]
[ext_resource type="AudioStream" uid="uid://di4ljwyuicsmv" path="res://assets/audio/gun_in_small_room_01-91808.mp3" id="5_m2xil"]

[sub_resource type="AtlasTexture" id="AtlasTexture_unbqp"]
atlas = ExtResource("4_5i172")
region = Rect2(170, 0, 444, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ecj8"]
atlas = ExtResource("4_5i172")
region = Rect2(614, 0, 444, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gmv4"]
atlas = ExtResource("4_5i172")
region = Rect2(1058, 0, 444, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkanb"]
atlas = ExtResource("4_5i172")
region = Rect2(1502, 0, 444, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8vtf"]
atlas = ExtResource("4_5i172")
region = Rect2(1946, 0, 444, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6v76"]
atlas = ExtResource("4_5i172")
region = Rect2(2390, 0, 444, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_5bso6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_unbqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ecj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gmv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkanb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8vtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6v76")
}],
"loop": false,
"name": &"fire",
"speed": 12.0
}]

[node name="Cannon" type="Node2D"]
position = Vector2(158, 151)
script = ExtResource("1_p1qtf")

[node name="CannonBody" type="Node2D" parent="."]
position = Vector2(-3, -7)

[node name="playerSpawn" type="Node2D" parent="CannonBody"]
position = Vector2(42, 1)

[node name="BodySprite2D" type="Sprite2D" parent="CannonBody"]
z_index = 1000
position = Vector2(17, -5)
scale = Vector2(0.18894, 0.18894)
texture = ExtResource("2_6g0li")

[node name="cannonShootAnimationSprite" type="AnimatedSprite2D" parent="CannonBody"]
z_index = 1000
position = Vector2(132, -2)
scale = Vector2(0.338095, 0.338095)
sprite_frames = SubResource("SpriteFrames_5bso6")
animation = &"fire"

[node name="BaseSprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, 20)
scale = Vector2(0.175951, 0.175951)
texture = ExtResource("3_13u24")

[node name="shootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_m2xil")
